--- a/fanswarm/templates/teams.html
+++ b/fanswarm/templates/teams.html
@@ -4,8 +4,10 @@
 
 <h1>Teams</h1>
 
-{% for team in team_list %}
-hi
-{% endfor %}
+<ul>
+  {% for team in team_list %}
+  <li><a href="{% url 'team-detail' team_id=team.id %}">{{ team.team_location_name }} {{ team.team_name }}</a></li>
+  {% endfor %}
+</ul>
 
 {% endblock %}
