--- a/fanswarm/templates/base.html
+++ b/fanswarm/templates/base.html
@@ -46,7 +46,7 @@
             <a class="nav-link" href="{% url 'teams' %}">Teams</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
+            <a class="nav-link" href="{% url 'events' %}">Events</a>
           </li>
         </ul>
       </div>
