--- a/fanswarm/templates/user_detail.html
+++ b/fanswarm/templates/user_detail.html
@@ -11,6 +11,6 @@
   <li>{{ user.member_since }}</li>
 </ul>
 
-<a href="{% url 'user-edit' user_id=user.id %}">Edit Email</a>
+<a href="{% url 'user-edit' user_id=user.id %}">Edit</a>
 
 {% endblock %}
