--- a/fanswarm/templates/events.html
+++ b/fanswarm/templates/events.html
@@ -10,6 +10,6 @@
   {% endfor %}
 </ul>
 
-<a href="{% url 'event-create' event_id=event.id %}">Create new event!</a>
+<a href="{% url 'event-create' %}">Create new event!</a>
 
 {% endblock %}
