--- a/fanswarm/templates/user_detail.html
+++ b/fanswarm/templates/user_detail.html
@@ -11,6 +11,13 @@
   <li>{{ user.member_since }}</li>
 </ul>
 
+<h3>Favorite Teams</h3>
+<ul>
+  {% for team in user.favorite_teams.all %}
+  <li>{{ team }}</li>
+  {% endfor %}
+</ul>
+
 <a href="{% url 'user-edit' user_id=user.id %}">Edit</a>
 
 {% endblock %}
