--- a/fanswarm/templates/user_edit.html
+++ b/fanswarm/templates/user_edit.html
@@ -4,7 +4,8 @@
 
 <h1>Update</h1>
 
-<form action="" method="post">{% csrf_token %}
+<form action="" method="post">
+    {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Update" />
 
