Fix event edit URL structure and form

--- a/fanswarm/templates/fs/event_detail.html
+++ b/fanswarm/templates/fs/event_detail.html
@@ -10,5 +10,7 @@
 </ul>
 
 <a href="{% url 'event-edit' event_id=event.id %}">Edit</a>
+<br>
+<a href="{% url 'events' %}">Back to Events</a>
 
 {% endblock %}
