Add time and date widgets to event create and edit

--- a/fanswarm/templates/event_edit.html
+++ b/fanswarm/templates/event_edit.html
@@ -5,6 +5,7 @@
 <h1>Update Event</h1>
 
 <form action="" method="post">{% csrf_token %}
+    {{ time_form.as_p }}
     {{ form.as_p }}
     <input type="submit" value="Update" />
 
