--- a/fanswarm/templates/user_detail.html
+++ b/fanswarm/templates/user_detail.html
@@ -19,6 +19,7 @@
   {% endif %}
   {% endfor %}
 </ul>
+<a href="{% url 'user-team-edit' user_id=user.id %}">Edit Favorite NBA Teams</a>
 
 <h3>Favorite NFL Teams</h3>
 <ul>
@@ -48,6 +49,5 @@
 </ul>
 
 
-<a href="{% url 'user-edit' user_id=user.id %}">Edit</a>
-
+<a href="{% url 'user-edit' user_id=user.id %}">Edit Profile</a>
 {% endblock %}
