--- a/fanswarm/templates/fs/event_detail.html
+++ b/fanswarm/templates/fs/event_detail.html
@@ -4,10 +4,10 @@
 
 <h1>{{ event.fan_team }} vs. {{ event.opp_team }}</h1>
 
-<ul>
-  <li>The game is on {{ event.event_date }} at {{ event.event_time }}</li>
-  <li>Join us at {{ event.bar }}</li>
-</ul>
+<p>{{ event.event_date }} at {{ event.event_time }}</p>
+
+<p><b>{{ event.bar }}</b><br>{{ event.bar.street_address }}<br>{{ event.bar.city }}, {{ event.bar.state }} {{ event.bar.zip_code }}<br>
+{{ event.bar.phone_num }}</p>
 
 <a href="{% url 'event-edit' event_id=event.id %}">Edit</a>
 <br>
