Fix user edit teams

--- a/fanswarm/templates/user_edit.html
+++ b/fanswarm/templates/user_edit.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<!-- document get the leagues and the teams fields and add a handler to leages to get
+run the snippet that heather sent on click !-->
+
+<!-- read through about static files in django cuz gotta grab the static root !-->
 
 <h1>Update</h1>
 
