--- a/fanswarm/templates/base.html
+++ b/fanswarm/templates/base.html
@@ -40,7 +40,10 @@
             <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'login' %}">Login</a>
+            <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'events' %}">Events</a>
