--- a/fanswarm/templates/fs/event_detail.html
+++ b/fanswarm/templates/fs/event_detail.html
@@ -9,8 +9,12 @@
 <p><b>{{ event.bar }}</b><br>{{ event.bar.street_address }}<br>{{ event.bar.city }}, {{ event.bar.state }} {{ event.bar.zip_code }}<br>
 {{ event.bar.phone_num }}</p>
 
-{% if user.is_authenticated and user.id is event.owner.pk%}
+{% if user.is_authenticated and user.id is event.owner.pk %}
 <a href="{% url 'event-edit' event_id=event.id %}">Edit</a>
+{% endif %}
+<br>
+{% if user.is_authenticated %}
+<a href="{% url 'event-rsvp' event_id=event.id %}">View RSVP List</a>
 {% endif %}
 <br>
 <a href="{% url 'events' %}">Back to Events</a>
