--- a/fanswarm/templates/base.html
+++ b/fanswarm/templates/base.html
@@ -71,9 +71,11 @@
       {% endblock content %}
 
     </div>
-
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-<script src="{% static 'js/project.js' %}"></script>
+    
+    {% block javascript %}
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+      <script src="{% static 'js/project.js' %}"></script>
+    {% endblock javascript %}
 
   </body>
 </html>
