--- a/fanswarm/templates/user_edit.html
+++ b/fanswarm/templates/user_edit.html
@@ -2,12 +2,17 @@
 
 {% block content %}
 
+{% if user.is_authenticated and request.user.id is user.id %}
 <h1>Update</h1>
 
 <form class="user-edit-form" action="" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Update" />
+
+{% elif %}
+<h1>This isn't your profile...</h1>
+{% endif %}
 
 {% endblock %}
 
