--- a/fanswarm/templates/user_edit.html
+++ b/fanswarm/templates/user_edit.html
@@ -10,7 +10,7 @@
     {{ form.as_p }}
     <input type="submit" value="Update" />
 
-{% elif %}
+{% else %}
 <h1>This isn't your profile...</h1>
 {% endif %}
 
