--- a/fanswarm/templates/event_rsvp.html
+++ b/fanswarm/templates/event_rsvp.html
@@ -4,7 +4,13 @@
 
 <h1>Event RSVP List</h1>
 
-{% for user in user_list %}
-{% if team.team_sport_id == 2 %}
+<!-- team vs team -->
+<!-- date -->
+<!-- time -->
+<!-- bar -->
+
+<!-- button -->
+
+<!-- if rsvp then rsvp list -->
 
 {% endblock %}
