--- a/fanswarm/templates/event_detail.html
+++ b/fanswarm/templates/event_detail.html
@@ -25,7 +25,7 @@
 {% if attendees %}
   <ul>
   {% for user in attendees %}
-  <li>{{user}}</li>
+  <li><a href="{% url 'user-detail' user_id=user.id %}">{{user}}</a></li>
   {% endfor %}
   </ul>
 {% endif %}
